<resources>
    <string name="network_not_good">网络不给力</string>
    <string name="debug_fragment_databinding_warning">Debug 提示：此 Fragment 未遵循 DataBinding 严格模式，存在 视图调用的 Null 安全风险</string>
    <string name="debug_activity_databinding_warning">Debug 提示：此 Activity 未遵循 DataBinding 严格模式，存在 视图调用的 Null 安全风险</string>
    <string name="app_name">architecture</string>
    <string name="navigation_home">首页</string>
    <string name="navigation_chat">聊天</string>
    <string name="navigation_clan">谱林</string>
    <string name="navigation_find">发现</string>
    <string name="navigation_mine">我的</string>
    <string name="trends">动态</string>
    <string name="relatives_and_friends">亲友</string>
    <string name="take_picture">拍照</string>
    <string name="shot">拍摄</string>
    <string name="click_take_a_picture_long_press_record">单击拍照,长按录制</string>
    <string name="select_from_phone_album">从手机相册选择</string>
    <string name="album">相册</string>
    <string name="record_short">录制时间太短</string>
    <string name="camera_beauty">美颜</string>
    <string name="camera_filter">滤镜</string>
    <string name="filter_none">原图</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="editing">编辑...</string>
    <string name="in_operation">操作中...</string>
    <string name="personal_story">个人事迹</string>
    <string name="member_of_family">家庭成员</string>
    <string name="gregorian_time_tip">公历时间:</string>
    <string name="lunar_time_tip">农历时间:</string>
    <string name="buried_in_tip">葬于:</string>
    <string name="please_enter_your_name">请输入姓名</string>
    <string name="enter_the_list">进入榜单</string>
    <string name="amount_of_money">金额</string>
    <string name="view_full_text"><![CDATA[查看全文>>]]></string>
    <string name="payment_amount">支付金额</string>
    <string name="delete_article">删除文章</string>
    <string name="revise_the_article">修改文章</string>
    <string name="modify">修改</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="same_city">同城</string>
    <string name="share">分享</string>
    <string name="do_like">点赞</string>
    <string name="comment">评论</string>
    <string name="expand_text">全文</string>
    <string name="contract_text">收回</string>
    <string name="zero">0</string>
    <string name="wechat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="union_bank">银行卡</string>
    <string name="no_brief_introduction">暂无简介</string>
    <string name="no_relevant_information">暂无相关信息</string>
    <string name="no_info">暂无</string>
    <string name="no_information">暂无信息</string>
    <string name="my_wallet">我的钱包</string>
    <string name="view_now">立即查看</string>
    <string name="go_to_view">查看</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_like">我的喜欢</string>
    <string name="my_article">我的文章</string>
    <string name="collect_article">收藏文章</string>
    <string name="my_trends">我的动态</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="setting">设置</string>
    <string name="head_img">头像</string>
    <string name="username">姓名</string>
    <string name="truename">真实姓名</string>
    <string name="nickname">昵称</string>
    <string name="added">已添加</string>
    <string name="add">添加</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="age_year">%s岁</string>
    <string name="id">谱林号</string>
    <string name="area">地区</string>
    <string name="areaTip">地区：</string>
    <string name="personal_signature">个性签名</string>
    <string name="qr_code">二维码</string>
    <string name="user_info">个人信息</string>
    <string name="set_name">设置姓名</string>
    <string name="set_nickname">设置昵称</string>
    <string name="set_name_tip">请设置2–24个字符</string>
    <string name="save">保存</string>
    <string name="save_successful">保存成功</string>
    <string name="set_age">设置年龄</string>
    <string name="set_sex">设置性别</string>
    <string name="set_area">设置地区</string>
    <string name="set_sign">设置个性签名</string>
    <string name="qr_code_tip">该二维码7天内有效,重新进入将更新</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="male_people_num">男: %s人</string>
    <string name="female_people_num">女: %s人</string>
    <string name="people_num">%s人</string>
    <string name="sex_secrecy">保密</string>
    <string name="set_id_tip">设置新的谱林号</string>
    <string name="set_id_tip_detail">谱林号限6–24位,建议避免包含姓名等涉及个人隐私信息</string>
    <string name="determine">确定</string>
    <string name="choose_position">选择的位置</string>
    <string name="all">全部</string>
    <string name="red_envelopes">红包</string>
    <string name="red_envelope_record">红包记录</string>
    <string name="condolence_red_envelopes">慰问包</string>
    <string name="condolence_red_envelopes_record">慰问包记录</string>
    <string name="red_envelopes_cover">红包封面</string>
    <string name="phone_number">手机号</string>
    <string name="change_password">修改密码</string>
    <string name="set_pay_password">设置支付密码</string>
    <string name="hide_my_genealogy_info">隐藏我的族谱信息</string>
    <string name="hide_my_family_tree_info">隐藏我的家谱信息</string>
    <string name="search_me_by_ID">通过谱林号搜索到我</string>
    <string name="search_me_by_phone_number">通过手机号搜索到我</string>
    <string name="authentication_is_required_when_adding_me_as_a_relative_or_friend">添加我为亲友时需认证</string>
    <string name="receive_new_message_notification">接收新消息通知</string>
    <string name="recommend_contacts_to_me">向我推荐通讯录好友</string>
    <string name="about_clan">关于谱林</string>
    <string name="log_out">退出登录</string>
    <string name="change_phone_number">更换手机号</string>
    <string name="phone_number_86">+86</string>
    <string name="please_enter_your_mobile_phone_number">请输入您的手机号码</string>
    <string name="your_mobile_phone_number_is">你的手机号码: %s</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="verification_code">验证码</string>
    <string name="get_captcha">获取验证码</string>
    <string name="finish">完成</string>
    <string name="submit">提交</string>
    <string name="new_password">新密码</string>
    <string name="old_password">旧密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="forget_old_password">忘记旧密码</string>
    <string name="please_enter_the_old_password">请输入旧密码</string>
    <string name="please_enter_the_new_password">请输入新密码</string>
    <string name="please_fill_in_the_new_password_again">请再次填写新密码</string>
    <string name="please_enter_the_password_again">请再次输入密码</string>
    <string name="date_of_birth_tip">出生日期:</string>
    <string name="gregorian_calendar">公历</string>
    <string name="lunar_calendar">农历</string>
    <string name="hour_ancient">时辰</string>
    <string name="hide_genealogy_info">隐藏族谱信息</string>
    <string name="hide_family_tree_info">隐藏家谱信息</string>
    <string name="other_tip">其他:</string>
    <string name="personal_video">个人视频</string>
    <string name="curriculum_vitae">个人简历</string>
    <string name="contact_number">联系电话</string>
    <string name="contact_number_tip">联系电话:</string>
    <string name="telephone_tip">电话:</string>
    <string name="development_location">发展地点</string>
    <string name="current_address">现居地址</string>
    <string name="my_honor">我的荣誉</string>
    <string name="spouse_information">配偶资料</string>
    <string name="son_information">儿子资料</string>
    <string name="daughter_information">女儿资料</string>
    <string name="siblings_information">兄弟姐妹资料</string>
    <string name="daughter_in_law_information">儿媳妇资料</string>
    <string name="son_in_law_information">女婿资料</string>
    <string name="clan_chat">谱林聊天</string>
    <string name="search">搜索</string>
    <string name="search_trends">搜索动态</string>
    <string name="view_trends">查看动态</string>
    <string name="who_trends">%s的动态</string>
    <string name="do_not_show">不显示</string>
    <string name="del">删除</string>
    <string name="friend_add">添加朋友</string>
    <string name="friend_agree">同意</string>
    <string name="friend_refuse">拒绝</string>
    <string name="group_chat_add">添加群聊</string>
    <string name="search_for_specified_content">搜索指定内容</string>
    <string name="group_chat">群聊</string>
    <string name="chat_record">聊天记录</string>
    <string name="search_relatives_and_friends">搜索亲友</string>
    <string name="search_not_found_result_by_keyword">未搜索到\"%s\",仅为输入的搜索内容</string>
    <string name="search_not_found_result">没有找到\"%s\"</string>
    <string name="contact_more">更多联系人</string>
    <string name="set_as_privacy">设为私密</string>
    <string name="send_to_friends">分享</string>
    <string name="find">发现</string>
    <string name="search_city">输入城市名搜索</string>
    <string name="image_and_video">图片与视频</string>
    <string name="chat_content">聊天内容</string>
    <string name="file">文件</string>
    <string name="article">文章</string>
    <string name="publish">发布</string>
    <string name="clip">剪辑</string>
    <string name="write_a_review">写评论...</string>
    <string name="reply">回复</string>
    <string name="reply_user">回复%s:</string>
    <string name="send">发送</string>
    <string name="my_balance_rmb">我的余额(元)</string>
    <string name="recharge">充值</string>
    <string name="withdrawal">提现</string>
    <string name="other_services">其他服务</string>
    <string name="FAQ">常见问题</string>
    <string name="customer_service">客服</string>
    <string name="transaction_details">交易明细</string>
    <string name="withdrawal_amount">提现金额</string>
    <string name="min_withdrawal_amount">（最低￥%s起）</string>
    <string name="the_balance_is">余额为￥%s</string>
    <string name="money_show">%s元</string>
    <string name="yuan">元</string>
    <string name="please_input_the_withdrawal_amount">请输入提现金额</string>
    <string name="full_withdrawal">全部提现</string>
    <string name="withdrawal_method">提现方式</string>
    <string name="please_choose_the_withdrawal_method">请选择提现方式</string>
    <string name="immediate_withdrawal">立即提现</string>
    <string name="account_balance">账户余额</string>
    <string name="recharge_amount">充值金额</string>
    <string name="other_recharge_amount">其他充值金额</string>
    <string name="payment_method">支付方式</string>
    <string name="Immediate_payment">立即支付</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="please_add_your_own_bank_card">请添加持卡人本人的银行卡</string>
    <string name="get_image_fail">图片获取失败</string>
    <string name="Failed_to_save_the_picture_Please_try_again">图片保存失败,请重新再试</string>
    <string name="set_fail">设置失败</string>
    <string name="friend_permission">朋友权限</string>
    <string name="originate">来源</string>
    <string name="join_in_blacklist">加入黑名单</string>
    <string name="clan_welcome">欢迎来到    天奖谱林</string>
    <string name="collect">收藏</string>
    <string name="details">详情</string>
    <string name="img_video">图片与视频</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="an_association">社团</string>
    <string name="club_home">社团主页</string>
    <string name="club_mail_list">社团通讯录</string>
    <string name="new_friends">新的朋友</string>
    <string name="people_nearby">附近的人</string>
    <string name="dynamic_message">动态消息</string>
    <string name="article_recommendation">文章推荐</string>
    <string name="operating_instructions">操作说明</string>
    <string name="search_the_communities_you_are_interested_in">搜索你感兴趣的社团</string>
    <string name="selected_clubs">精选社团</string>
    <string name="search_club">搜索社团</string>
    <string name="see_more">查看更多</string>
    <string name="join">加入</string>
    <string name="number_of_people">人数</string>
    <string name="creation_time">创建时间</string>
    <string name="report">举报</string>
    <string name="please_input_pay_password">请输入支付密码</string>
    <string name="find_new_version_tip">发现新版本,是否立即下载更新?</string>
    <string name="your_friends_are_also_on_the_clan">你的%s好友也在也在天奖谱林中</string>
    <string name="address_book_friend_push">通讯录好友推送</string>
    <string name="blance">零钱</string>
</resources>