<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_white_10"
            android:layout_marginTop="@dimen/dp_120"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:paddingTop="@dimen/dp_20"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:src="@mipmap/ic_close_x"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textColor="@color/c_070707"
                    android:text="@string/please_input_pay_password"/>
            </LinearLayout>
            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_30"
                android:textSize="@dimen/sp_14"
                android:textColor="@color/c_1A1A1A"
                tools:text="谱林红包"/>
            <TextView
                android:id="@+id/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/c_070707"
                android:textStyle="bold"
                tools:text="5.20"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@color/c_E5E5E5"/>
            <LinearLayout
                android:id="@+id/linear_pay_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/payment_method"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blance"
                    android:drawablePadding="@dimen/dp_5"
                    android:drawableRight="@mipmap/ic_enter_right"/>
            </LinearLayout>
            <com.fjsy.architecture.ui.PayPasswordNumInputView
                android:id="@+id/num_input_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_30"/>
        </LinearLayout>


        <com.fjsy.architecture.ui.NumberKeyboardView
            android:id="@+id/number_keyboard_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </RelativeLayout>
</layout>